[template]
name = template-autumn-demo
version = 0.0.1
author = cyan
author_email = 
description = simple demo for venv and package structure
long_description = file: README.md
long_description_content_type=textmarkdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = src